# tarot-bot-rust

./: Cargo.toml  Makefile
tarot-bot-rust/: Cargo.toml
tarot-bot-rust/data/: 0_The_Fool.json  10_Wheel_of_Fortune.json  11_Justice.json  12_The_Hanged_Man.json  13_Death.json  14_Temperance.json  15_The_Devil.json  16_The_Tower.json  17_The_Star.json  18_The_Moon.json  19_The_Sun.json  1_The_Magician.json  20_Judgement.json  21_The_World.json  22_Ace_of_Wands.json  23_Two_of_Wands.json  24_Three_of_Wands.json  25_Four_of_Wands.json  26_Five_of_Wands.json  27_Six_of_Wands.json  28_Seven_of_Wands.json  29_Eight_of_Wands.json  2_The_High_Priestess.json  30_Nine_of_Wands.json  31_Ten_of_Wands.json  32_Ace_of_Cups.json  33_Two_of_Cups.json  34_Three_of_Cups.json  35_Four_of_Cups.json  36_Five_of_Cups.json  37_Six_of_Cups.json  38_Seven_of_Cups.json  39_Eight_of_Cups.json  3_The_Empress.json  40_Nine_of_Cups.json  41_Ten_of_Cups.json  42_Ace_of_Swords.json  43_Two_of_Swords.json  44_Three_of_Swords.json  45_Four_of_Swords.json  (+38 more)
tarot-bot-rust/src/: handler.rs  help.rs  lib.rs  tarot_info.rs
web-server/: Cargo.toml
web-server/src/: main.rs
