[workspace]
members = ["tarot-bot-rust", "web-server"]

[workspace.dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1"
tracing-subscriber = "0.3"