[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
dotenv = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tarot-bot-rust = {path = "../tarot-bot-rust"}
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }